RESOLVED FIXED265392
[WGSL] Constant cross function breaks with f16
https://bugs.webkit.org/show_bug.cgi?id=265392
Summary [WGSL] Constant cross function breaks with f16
Tadeu Zagallo
Reported 2023-11-27 11:24:58 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-27 11:25:10 PST
Tadeu Zagallo
Comment 2 2023-11-27 11:27:30 PST
EWS
Comment 3 2023-11-28 05:30:48 PST
Committed 271201@main (7aa3c2dee61a): <https://commits.webkit.org/271201@main> Reviewed commits have been landed. Closing PR #20941 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.