[WGSL] Constant cross function breaks with f16 https://bugs.webkit.org/show_bug.cgi?id=265392 rdar://118842794

Reviewed by Mike Wyrzykowski.

We need to explicitly cast the elements of the result vector, as the f16/half
values get implicitly promoted to float.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:

Canonical link: https://commits.webkit.org/271201@main